--- a/client/SASS/_layout.scss
+++ b/client/SASS/_layout.scss
@@ -1,41 +1,8 @@
 
-
 .login {
-    border: 2px solid #6424ad;
-    padding: 5px;
-    width: 200px;
-    border-radius: 10px;
-}
-
-.messages {
-    :first-child {
-        font-weight: bold;
-        font-size: 50px;
-        color: #aa6adb;
-        text-align: center;
-    }
-
-    :nth-child(2) {
-        font-weight: bold;
-        float: right;
-    }
-
-    :nth-child(n+3) {
-        float:right;
-        clear: both;
-    }
-    // :nth-child(2n+3) {
-    //     font-weight: bold;
-    //     float: left;
-    //     clear: both;
-    // }
-    //
-    // :nth-child(2n+4) {
-    //     margin-left: 20px;
-    //     clear: both;
-    // }
-}
-
-.send-message {
-    display: none;
+    border: $loginBorder;
+    padding: $loginPadding;
+    width: $loginWidth;
+    border-radius: $formsBorderRadius;
+    text-align: center;
 }
