--- a/client/SASS/chatlist.scss
+++ b/client/SASS/chatlist.scss
@@ -1,12 +1,38 @@
 .chat {
-    border: 2px dotted #dbb0e8;
-    margin-top: 20px;
-    width: 360px;
+    margin-top: $chatTopMargin;
+    width: $chatMainWidth;
+    border: $chatBorder;
 }
 
 .send-message {
-    margin-top: 45px;
-    float: right;
-    border: 1px solid #dbb0e8;
-    padding: 5px;
+    display: none;
+    width: $msgInputWidth;
+    margin-top: $msgInputTopSeparation;
+    border: $msgInputBorder;
+    padding: $msgInputPadding;
+
+    .message {
+        width: $msgInputBoxWidth;
+    }
+}
+
+.messages {
+    :first-child {
+        font-weight: bold;
+        font-size: $chatInitFontSize;
+        color: $chatInitFontColor;
+        text-align: center;
+    }
+
+    :nth-child(2) {
+        text-align: right;
+        font-weight: bold;
+        padding-right: $userJoinPaddingRight;
+    }
+
+    :nth-child(n+3) {
+        text-align: right;
+        padding-right: $messagePaddingRight;
+    }
+
 }
