--- a/client/styles.css
+++ b/client/styles.css
@@ -2,7 +2,22 @@
   border: 2px solid #6424ad;
   padding: 5px;
   width: 200px;
-  border-radius: 10px; }
+  border-radius: 10px;
+  text-align: center; }
+
+.chat {
+  margin-top: 20px;
+  width: 360px;
+  border: 2px dotted #dbb0e8; }
+
+.send-message {
+  display: none;
+  width: 97%;
+  margin-top: 10px;
+  border: 1px solid #dbb0e8;
+  padding: 5px; }
+  .send-message .message {
+    width: 84%; }
 
 .messages :first-child {
   font-weight: bold;
@@ -10,24 +25,11 @@
   color: #aa6adb;
   text-align: center; }
 .messages :nth-child(2) {
+  text-align: right;
   font-weight: bold;
-  float: right; }
+  padding-right: 10px; }
 .messages :nth-child(n+3) {
-  float: right;
-  clear: both; }
-
-.send-message {
-  display: none; }
-
-.chat {
-  border: 2px dotted #dbb0e8;
-  margin-top: 20px;
-  width: 360px; }
-
-.send-message {
-  margin-top: 45px;
-  float: right;
-  border: 1px solid #dbb0e8;
-  padding: 5px; }
+  text-align: right;
+  padding-right: 10px; }
 
 /*# sourceMappingURL=styles.css.map */
